--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,14 @@
 # This file is a template, and might need editing before it works on your project.
 # To contribute improvements to CI/CD templates, please follow the Development guide at:
 # https://docs.gitlab.com/ee/development/cicd/templates.html
+
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Python.gitlab-ci.yml
 
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
 # image: python:latest
-image: python:3.10
+image: python:3.10.0-alpine3.15
 
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
@@ -33,18 +34,18 @@ before_script:
   - pip install virtualenv
   - virtualenv venv
   - source venv/bin/activate
-  - pipenv install
+  - pipenv install --dev
 
 stages:
-  - security
+  - test
   - linter
 
-sast:
-  stage: security
-include:
-- template: Security/SAST.gitlab-ci.yml
+unittest:
+  stage: test
+  script:
+    - pipenv run python -m unittest discover
 
 flake8:
   stage: linter
   script:
-    - pipenv run flake8
+    - pipenv run flake8 aoc tests
