--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ name = "pypi"
 [packages]
 
 [dev-packages]
-flake8 = "*"
-ipdb = "*"
+flake8 = ">=4.0.1"
+ipdb = ">=0.13.9"
 
 [requires]
 python_version = "3.10"
